--- a/gb/20/8/25/n12357044.md
+++ b/gb/20/8/25/n12357044.md
@@ -1,8 +1,8 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eqtrvx309/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eqtrvx309/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/eqtrvx309/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eqtrvx309/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/eqtrvx309/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eqtrvx309/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/eqtrvx309/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eqtrvx309/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/eqtrvx309/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eqtrvx309/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/eqtrvx309/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eqtrvx309/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/eqtrvx309/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eqtrvx309/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/eqtrvx309/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eqtrvx309/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/eqtrvx309/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eqtrvx309/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/eqtrvx309/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eqtrvx309/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eqtrvx309/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eqtrvx309/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eqtrvx309/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eqtrvx309/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eqtrvx309/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eqtrvx309/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eqtrvx309/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eqtrvx309/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eqtrvx309/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eqtrvx309/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eqtrvx309/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eqtrvx309/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eqtrvx309/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/eqtrvx309/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/eqtrvx309/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eqtrvx309/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eqtrvx309/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eqtrvx309/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eqtrvx309/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eqtrvx309/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eqtrvx309/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eqtrvx309/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eqtrvx309/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/eqtrvx309/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eqtrvx309/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eqtrvx309/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eqtrvx309/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【欺世大观】抗战八大将军 血洒疆场</h2>
-<a href="https://git.io/JU8KF"><img width="600" src="https://raw.githubusercontent.com/eqtrvx309/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eqtrvx309/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d1uqjs1ubkxo6.cloudfront.net/P9k5tn12d"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>【欺世大观】8: 抗战八大将军，血洒疆场。国军高级将领与日军浴血对决。本片介绍被追封为上将八人：佟麟阁，赵登禹，郝梦龄，饶国华，王铭章，张自忠，唐淮源和李家钰。（公有领域／大纪元合成）
 </h6>
 <hr>
@@ -10,11 +10,11 @@
 <p>还有2015年赶上抗战胜利70年纪念日左右为难的尴尬。不纪念吧，验证了自己没资格，庆祝吧，宣传上又没料，最后王沪宁们歪脑子一转，就把庆祝大会主标题加上个后缀——暨世界反法西斯战争胜利70周年，冠以纪念二战盟军胜利的一半主题，这回可以遮遮丑了吧。</p>
 <p>然后党媒就开始煽动，说请到了多少多少国首脑捧场，结果名单一出炉，笑掉了全世界大牙。拨拉来拨拉去，只有普京算是代表二战一个主要参与国，美英等主力盟国根本没露面。其它就都是些亚非拉被中共国撒币砸出来蹭吃蹭喝的小兄弟了。</p>
 <p>我点几个人您就更觉得出奇了：韩国朴槿惠朴大妈，散会回去就成囚犯了，委内瑞拉独裁者马杜罗回去就不被西方主要国家承认合法了，白俄罗斯独裁者卢卡申科卢书记如今遇上颜色革命，朝不保夕。更多的小兄弟在当下中共病毒杀伤面前，也是和大哥渐行渐远。</p>
-<p>今天这一集让我们回到中国抗战主战场。<ahref="https://github.com/eqtrvx309/djy/blob/master/gb/tag/%E5%9B%BD%E5%86%9B%E5%B0%86%E5%A3%AB.md#1">国军将士</a>怎样与<ahref="https://github.com/eqtrvx309/djy/blob/master/gb/tag/%E6%97%A5%E5%86%9B.md#1">日军</a>浴血对决。</p>
-<p><center><a src=""></a><a href="https://git.io/JU8KF"><img width="600" src="https://raw.githubusercontent.com/eqtrvx309/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eqtrvx309/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/BxGnP8AmcxY" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center>八年抗战中，当中共将领们或安于陕北，或小打小闹所谓“<ahref="https://github.com/eqtrvx309/djy/blob/master/gb/tag/%E6%8A%97%E6%97%A5.md#1">抗日</a>”时，国军将领们却身先士卒，率领部队与实力装备强于自己的<ahref="https://github.com/eqtrvx309/djy/blob/master/gb/tag/%E6%97%A5%E5%86%9B.md#1">日军</a>面对面打起了一个个大仗、硬仗。据中华民国国防部1946年统计，国军陆海空捐躯沙场、伤病不治总计3,650,465人，外加损失全部海军舰艇，官兵几乎全员阵亡，空军则损失2468架战机和大部分飞行员。仅国军高级将领即有206位阵亡。有一个片子叫《一寸河山一寸血》，台湾媒体依据采访幸存的600名国军官兵而制作。相信不少朋友翻墙出来看过，国军顽强面对不可一世的日军，那种大战惨烈度，尸骨成山，血流成河，几十年后仍然令观者震撼不已。</p>
+<p>今天这一集让我们回到中国抗战主战场。<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%9B%BD%E5%86%9B%E5%B0%86%E5%A3%AB.md#1">国军将士</a>怎样与<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%97%A5%E5%86%9B.md#1">日军</a>浴血对决。</p>
+<p><center><a src=""></a><a href="https://d1uqjs1ubkxo6.cloudfront.net/P9k5tn12d"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/BxGnP8AmcxY" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center>八年抗战中，当中共将领们或安于陕北，或小打小闹所谓“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%8A%97%E6%97%A5.md#1">抗日</a>”时，国军将领们却身先士卒，率领部队与实力装备强于自己的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%97%A5%E5%86%9B.md#1">日军</a>面对面打起了一个个大仗、硬仗。据中华民国国防部1946年统计，国军陆海空捐躯沙场、伤病不治总计3,650,465人，外加损失全部海军舰艇，官兵几乎全员阵亡，空军则损失2468架战机和大部分飞行员。仅国军高级将领即有206位阵亡。有一个片子叫《一寸河山一寸血》，台湾媒体依据采访幸存的600名国军官兵而制作。相信不少朋友翻墙出来看过，国军顽强面对不可一世的日军，那种大战惨烈度，尸骨成山，血流成河，几十年后仍然令观者震撼不已。</p>
 <p>与之相反的是，共军甚少有高级将领献身沙场。这从一个侧面说明，抵御外侮的不是自我标榜的中共，而是几十年来被中共诋毁的中华民国政府。</p>
 <p>殉职的国军高级将领众多，他们为民族大义慷慨赴死的精神至今仍辉耀在中华大地上。遗憾的是，本片在有限的节目时长里无法一一介绍，只能简约介绍八人。他们就是被追封为上将的佟麟阁、赵登禹、郝梦龄、饶国华、王铭章、张自忠、唐淮源和李家钰。</p>
-<p>下面分别来说说八位英雄。佟麟阁是抗战爆发后捐躯的第一位高级将领。日军1937年7月进攻北平时，驻守北平的正是中将副军长兼军官教导团团长佟麟阁所辖的第二十九军。早在日军入侵前，他就常对手下士兵说：“中央如下令<ahref="https://github.com/eqtrvx309/djy/blob/master/gb/tag/%E6%8A%97%E6%97%A5.md#1">抗日</a>，麟阁若不身先士卒，君等可执往天安门前，挖我两眼，割我两耳。”</p>
+<p>下面分别来说说八位英雄。佟麟阁是抗战爆发后捐躯的第一位高级将领。日军1937年7月进攻北平时，驻守北平的正是中将副军长兼军官教导团团长佟麟阁所辖的第二十九军。早在日军入侵前，他就常对手下士兵说：“中央如下令<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%8A%97%E6%97%A5.md#1">抗日</a>，麟阁若不身先士卒，君等可执往天安门前，挖我两眼，割我两耳。”</p>
 <p>日军开始攻击北平时，正逢佟麟阁父亲病重，家人多次催促他回北平城内寓所探视，但他认为战事瞬息万变，不能离开部队，于是写信告之家人：“大敌当前，此移孝作忠之时，我不能亲奉汤药，请代为之。”</p>
 <p>不久，佟麟阁便上战场与日军血战，不幸腿部和头部先后中弹，壮烈牺牲，时年45岁。</p>
 <p>与佟麟阁同一天殉国的还有第二十九军一三二师中将师长赵登禹。面对日军的猛烈进攻，赵登禹率部顽强抵抗。见他中枪受伤，传令兵就要背他下战场，他却说：“不要管我，军人战死沙场原是本分，没有什么值得悲伤的。北平城里还有我的老母，告诉她老人家，自古忠孝不能两全，她的儿子为国死了，也对得起祖宗！”说罢继续指挥部队。后来突围时，他再次被日军机枪射中胸部，当即殉国，年仅39岁。</p>
@@ -33,50 +33,49 @@
 <p>1944年4月，日军纠集4个师团和5个旅团约15万兵力，发起豫中战役，企图通过南北夹攻，打通平汉路，占领洛阳和平汉路以西广大地区。时任第三十六集团军总司令的李家钰主动承担了后卫任务，掩护大部队转移。在与日军的交战中，李将军身中数弹殉国。他是抗战期间继张自忠之后殉国的第二位集团军总司令级别高级将领。</p>
 <p>说到此，我等只恨穷尽笔墨言语也无法表达先烈壮烈之万一，只又深深体会精忠报国的岳飞“仰天长啸，壮怀激烈”的英雄情怀！我们更知道，无论真实历史怎样被窃国的共产党篡改抹黑，乌云，永远遮不住英雄辉耀天地的光芒。</p>
 <p>各位看官，八将军的故事讲完了。其中，佟麟阁、赵登禹、张自忠三位国军先烈的名字至今仍然是北京三条街的名字，中共政权不敢冒天下之大不韪，抹去中国人民的英雄记忆。而林彪、彭德怀这样的共军将领，却无缘冠名自己效忠的党国街道。这，难道不讽刺不可悲吗？</p>
-<p>各位，恭请您订阅、传播【<ahref="https://github.com/eqtrvx309/djy/blob/master/gb/tag/%E6%AC%BA%E4%B8%96%E5%A4%A7%E8%A7%82.md#1">欺世大观</a>】，也欢迎您留言，我们下集再见。</p>
-<p>《<ahref="https://github.com/eqtrvx309/djy/blob/master/gb/tag/%E6%AC%BA%E4%B8%96%E5%A4%A7%E8%A7%82.md#1">欺世大观</a>》制作组</p>
+<p>各位，恭请您订阅、传播【<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%AC%BA%E4%B8%96%E5%A4%A7%E8%A7%82.md#1">欺世大观</a>】，也欢迎您留言，我们下集再见。</p>
+<p>《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%AC%BA%E4%B8%96%E5%A4%A7%E8%A7%82.md#1">欺世大观</a>》制作组</p>
 <p>责任编辑：李昊#</p>
 	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/eqtrvx309/djy/blob/master/gb/8/2/5/n2002453.md#1">抗战殉国的第一位师长──赵登禹</a></li>
-<li><a href="https://github.com/eqtrvx309/djy/blob/master/gb/8/2/26/n2024105.md#1">抗战殉国的第一位副军长──佟麟阁</a></li>
-<li><a href="https://github.com/eqtrvx309/djy/blob/master/gb/11/5/17/n3258975.md#1">5.16回顾中日枣宜会战 上将张自忠壮烈殉国</a></li>
-<li><a href="https://github.com/eqtrvx309/djy/blob/master/gb/15/7/7/n4474483.md#1">抗战是国民党领导 中共外交部藉辞回避</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/2/5/n2002453.md#1">抗战殉国的第一位师长──赵登禹</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/2/26/n2024105.md#1">抗战殉国的第一位副军长──佟麟阁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/5/17/n3258975.md#1">5.16回顾中日枣宜会战 上将张自忠壮烈殉国</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/7/n4474483.md#1">抗战是国民党领导 中共外交部藉辞回避</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/28/n10672735.md#1" target="_blank">为反右开场祭旗：三人被处决 万人围观</a></li><li><a href="https://github.com/eqtrvx309/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/2/24/n3807816.md#1" target="_blank">飞瀑：迫害法轮功 中共偷偷摸摸作恶何其多？</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/19/n10229517.md#1" target="_blank">中共淫乱的前生今世（3）政治局六淫棍</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/17/n11390870.md#1" target="_blank">胡平：20年烈火 法轮功屹立不倒成“真金”</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/saipau3170/djy/blob/master/gb/20/9/8/n12388668.md#1">乱世佳人的守护天使</a></li>
-<li><a href="https://github.com/saipau3170/djy/blob/master/gb/20/9/3/n12378183.md#1">书生神游天宫 原来世人多从天上来</a></li>
-<li><a href="https://github.com/saipau3170/djy/blob/master/gb/20/8/23/n12352129.md#1">到手钱财如水流？古今三故事 道出败财因由</a></li>
-<li><a href="https://github.com/saipau3170/djy/blob/master/gb/20/6/21/n12202372.md#1">龄官画蔷  从此各人得各人的眼泪</a></li>
-<li><a href="https://github.com/saipau3170/djy/blob/master/gb/20/9/8/n12389252.md#1">古中医“五藏六府”与现代“五脏六腑”之别处</a></li>
-<li><a href="https://github.com/saipau3170/djy/blob/master/gb/20/9/12/n12398327.md#1">【一线采访视频版】声援许章润 耿潇男失联</a></li>
-<li><a href="https://github.com/saipau3170/djy/blob/master/gb/20/9/13/n12400573.md#1">【新闻第一现场】“9?11”改变世界 美誓言永不忘记</a></li>
-<li><a href="https://github.com/saipau3170/djy/blob/master/gb/20/9/13/n12399670.md#1">【大选观察】拜登真的是“北京拜登”吗？</a></li>
-<li><a href="https://github.com/saipau3170/djy/blob/master/gb/20/9/12/n12399042.md#1">陈时中登小巨蛋飙唱 詹雅雯夸歌声有男子气魄</a></li>
-<li><a href="https://github.com/saipau3170/djy/blob/master/gb/20/9/11/n12397754.md#1">男星上节目睡成一片 邓超偷拍晒照引围观</a></li>
-<li><a href="https://github.com/saipau3170/djy/blob/master/gb/20/9/12/n12398512.md#1">胡锡进炫耀共军以无人机送餐 印度网民调侃</a></li>
-<li><a href="https://github.com/saipau3170/djy/blob/master/gb/20/9/11/n12397754.md#1">男星上节目睡成一片 邓超偷拍晒照引围观</a></li>
-<li><a href="https://github.com/saipau3170/djy/blob/master/gb/20/9/10/n12395386.md#1">黄子韬痛失最强靠山 52岁富豪父亲病逝</a></li>
-<li><a href="https://github.com/saipau3170/djy/blob/master/gb/20/9/10/n12395450.md#1">吐槽伊能静太唠叨 秦昊获赞有幽默感</a></li>
-<li><a href="https://github.com/saipau3170/djy/blob/master/gb/20/9/11/n12397522.md#1">好莱坞明星推介台湾 自制2分钟影片感动网友</a></li>
-<li><a href="https://github.com/saipau3170/djy/blob/master/gb/20/9/13/n12399769.md#1">张立昂宋芸桦穿越剧引热议 小说世界即将消失</a></li>
-<li><a href="https://github.com/saipau3170/djy/blob/master/gb/20/9/9/n12392244.md#1">不沾锅别用错 厨房6样东西使用不当小心吃毒</a></li>
-<li><a href="https://github.com/saipau3170/djy/blob/master/gb/20/9/11/n12397483.md#1">掉发原因有3种！中医4招防掉发 长回浓密黑发</a></li>
-<li><a href="https://github.com/saipau3170/djy/blob/master/gb/20/9/13/n12400181.md#1">川普所说中俄都不知道的核武 可能是指这个</a></li>
-<li><a href="https://github.com/saipau3170/djy/blob/master/gb/20/9/12/n12398512.md#1">胡锡进炫耀共军以无人机送餐 印度网民调侃</a></li>
-<li><a href="https://github.com/saipau3170/djy/blob/master/gb/20/9/11/n12396262.md#1">NBA收视率跌4成 向中共靠拢是原因之一</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eqtrvx309/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eqtrvx309/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/25/n12357044.htm">【欺世大观】抗战八大将军 血洒疆场</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/25/n12357044.htm">【欺世大观】抗战八大将军 血洒疆场</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/eqtrvx309/djy/blob/master/gb/20/8/25/n12357044.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eqtrvx309/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqtrvx309/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eqtrvx309/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eqtrvx309/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eqtrvx309/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqtrvx309/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eqtrvx309/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqtrvx309/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eqtrvx309/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqtrvx309/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eqtrvx309/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqtrvx309/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eqtrvx309/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqtrvx309/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eqtrvx309/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqtrvx309/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eqtrvx309/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqtrvx309/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/eqtrvx309/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqtrvx309/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eqtrvx309/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqtrvx309/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eqtrvx309/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqtrvx309/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/eqtrvx309/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqtrvx309/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eqtrvx309/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqtrvx309/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eqtrvx309/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqtrvx309/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eqtrvx309/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqtrvx309/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eqtrvx309/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqtrvx309/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eqtrvx309/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqtrvx309/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eqtrvx309/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqtrvx309/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eqtrvx309/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqtrvx309/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eqtrvx309/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqtrvx309/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eqtrvx309/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqtrvx309/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eqtrvx309/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqtrvx309/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eqtrvx309/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqtrvx309/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/8/25/n12357044.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
