--- a/gb/20/8/26/n12358629.md
+++ b/gb/20/8/26/n12358629.md
@@ -1,15 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jddrbr3603/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jddrbr3603/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/jddrbr3603/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jddrbr3603/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/jddrbr3603/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jddrbr3603/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/jddrbr3603/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jddrbr3603/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/jddrbr3603/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jddrbr3603/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/jddrbr3603/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jddrbr3603/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/jddrbr3603/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jddrbr3603/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/jddrbr3603/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jddrbr3603/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/jddrbr3603/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/jddrbr3603/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/jddrbr3603/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/jddrbr3603/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jddrbr3603/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/jddrbr3603/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jddrbr3603/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【欺世大观】千古恨！张学良自称罪人中的罪魁</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/08/6ec14954fd6286a43e05ad909801ba3d-600x400.jpg" />
+<a href="https://db8nk66phkh66.cloudfront.net/G0mmA999t"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>“西安事变”成千古恨，张学良为何不抵抗？中共称其是“千古功臣”，但为何张学良却说自己是“罪人中的罪魁”？（公有领域／大纪元合成）
 </h6>
 <hr>
 	<p>【大纪元2020年08月26日讯】观众朋友好！欢迎大家再次光顾《欺世大观》。</p>
-<p>85年前的这个8月，美国在日本广岛、长崎投下两颗原子弹“小男孩”和“胖子”。15日，日本向以中英美苏4国为主的盟军投降。中国人民在国民政府领导下浴血抗战8年，牺牲差不多1300万军民，终于赢来最后的胜利。然而，仅仅过了4年，中国人民更大的噩梦又开始了，一直到今天70年还没结束，而且无辜死去至少8000万同胞。而所有这些，都和两个人的阵前叛变有着绝大的关系。这俩人就是<ahref="https://github.com/jddrbr3603/djy/blob/master/gb/tag/%E5%BC%A0%E5%AD%A6%E8%89%AF.md#1">张学良</a>、杨虎城。</p>
-<p>中共有个双百“英雄模范”人物名单，<ahref="https://github.com/jddrbr3603/djy/blob/master/gb/tag/%E5%BC%A0%E5%AD%A6%E8%89%AF.md#1">张学良</a>、杨虎城这两个国军将领赫然在上，还被称作中共“大恩人”，中共称张、杨为“千古功臣”、“<ahref="https://github.com/jddrbr3603/djy/blob/master/gb/tag/%E6%B0%91%E6%97%8F%E8%8B%B1%E9%9B%84.md#1">民族英雄</a>”。</p>
-<p>然而，大家都没想到，晚年的张学良却称自己是“<ahref="https://github.com/jddrbr3603/djy/blob/master/gb/tag/%E7%BD%AA%E4%BA%BA%E4%B8%AD%E7%9A%84%E7%BD%AA%E9%AD%81.md#1">罪人中的罪魁</a>”，直接否定了中共的评价。为什么呢？今天的节目就先说说张学良。</p>
+<p>75年前的这个8月，美国在日本广岛、长崎投下两颗原子弹“小男孩”和“胖子”。15日，日本向以中英美苏4国为主的盟军投降。中国人民在国民政府领导下浴血抗战8年，牺牲差不多1300万军民，终于赢来最后的胜利。然而，仅仅过了4年，中国人民更大的噩梦又开始了，一直到今天70年还没结束，而且无辜死去至少8000万同胞。而所有这些，都和两个人的阵前叛变有着绝大的关系。这俩人就是<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%BC%A0%E5%AD%A6%E8%89%AF.md#1">张学良</a>、杨虎城。</p>
+<p>中共有个双百“英雄模范”人物名单，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%BC%A0%E5%AD%A6%E8%89%AF.md#1">张学良</a>、杨虎城这两个国军将领赫然在上，还被称作中共“大恩人”，中共称张、杨为“千古功臣”、“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B0%91%E6%97%8F%E8%8B%B1%E9%9B%84.md#1">民族英雄</a>”。</p>
+<p>然而，大家都没想到，晚年的张学良却称自己是“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BD%AA%E4%BA%BA%E4%B8%AD%E7%9A%84%E7%BD%AA%E9%AD%81.md#1">罪人中的罪魁</a>”，直接否定了中共的评价。为什么呢？今天的节目就先说说张学良。<br />
+<a src=""></a><a href="https://db8nk66phkh66.cloudfront.net/G0mmA999t"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/8u6x9iODCbA" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
 <h2>日本入侵东北 张学良亲下“不抵抗令”</h2>
 <p>张学良是奉系军阀张作霖的长子。1928年5月北洋政府瓦解时，最后一任统治者，也就是人称东北王的张作霖张大帅不听日本要他死守燕、冀的命令，撤回东北。6月4日凌晨5点，张作霖坐火车出山海关时，被日本关东军在皇姑屯炸死。</p>
 <p>父亲死后，张学良继任东北保安总司令，人称少帅。当年底，东北易帜，由五色旗改挂青天白日满地红国旗，宣布服从南京国民政府，使中国从形式上走向了统一。张学良被国民政府任命为陆海空军副司令、东北四省奉天、吉林、黑龙江、热河边防司令长官。</p>
@@ -28,66 +29,65 @@
 <p>在口述历史中，张学良也曾讲了一句：“也可以说我就是共产党。”但对于他如何申请入党，怎样被批准为共产党员的事，他都绝口不提。他还绝口不提自己与中共的关系，以及要成立西北国民政府那件事。</p>
 <p>张学良在口述中还透露，西安叛变自己名义上是主角，其实杨虎城才是主角，因为杨的妻子谢葆真和部下大多是中共党员。</p>
 <h2>中共幕后策划 遭遇尴尬</h2>
-<p>真实历史是，西安军事叛变的幕后策划者不是张、杨而是中共。事变发生当天，毛泽东发电报向斯大林汇报，说<ahref="https://github.com/jddrbr3603/djy/blob/master/gb/tag/%E8%A5%BF%E5%AE%89%E4%BA%8B%E5%8F%98.md#1">西安事变</a>是“根据张、杨、共三角联盟抗日反蒋的协议而发生的，中共中央已积极推动张、杨坚决与蒋分裂”。</p>
+<p>真实历史是，西安军事叛变的幕后策划者不是张、杨而是中共。事变发生当天，毛泽东发电报向斯大林汇报，说<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%A5%BF%E5%AE%89%E4%BA%8B%E5%8F%98.md#1">西安事变</a>是“根据张、杨、共三角联盟抗日反蒋的协议而发生的，中共中央已积极推动张、杨坚决与蒋分裂”。</p>
 <p>然而，出乎张、杨意料的是，对西安军事叛变，全国各界一片抗议谴责之声。清华大学的教授更是一致反对，曾被中共吹捧为战士的闻一多态度犹为鲜明。他和朱自清、冯友兰等一群著名教授，起草了“清华大学教授会为张学良叛变事声明”。平日在课堂上从无多余之言的闻一多，此时也抛开讲义，怒气冲冲地说道：“真是胡闹，国家的元首也可以武装劫持！一个带兵的军人，也可以称兵叛乱！这还成何国家？国家绝不容许你们破坏！领袖绝不容许你们妄加伤害！”曾经态度暧昧的各地方势力也一致讨伐张、杨。</p>
 <p>最让张、杨没想到的是苏联的反应。担心苏联面临东西线同时作战困境的斯大林，事变发生后立即亲自拟电命令中共：绝不容许杀蒋。结果，希望借张学良之手杀蒋的毛只好派周恩来去说服张、杨，并面见蒋介石开脱中共。在周恩来开口“校长”，闭口“校长”，还动以“天伦之情”，一再向蒋保证能让被扣留在苏联的蒋经国回国，让他们父子团圆之后，才得到原本决意以身殉国的蒋公的原谅和许诺，即停止剿共、联合抗日。</p>
 <h2>西安军事叛变后果</h2>
 <p>西安叛变的直接后果，是让中共获得了生存空间，从而开启了之后的中华民族厄运。蒋介石在《西安半月记》中痛心地说：“此次事变，为我国民革命过程中一大顿挫。八年剿匪之功，预计将于二星期（至多一个月）可竟全功者，几乎隳于一旦，而西北国防交通，经济建设，竭国家社会数十年之心力，经营敷饰，粗有规模，经此变化，损失难计。欲使地方秩序，经济信用恢复旧观，又决非咄嗟可办。质言之，建设进程，至少要后退三年，可痛至此”。</p>
-<p>此外，早已发话“对<ahref="https://github.com/jddrbr3603/djy/blob/master/gb/tag/%E8%A5%BF%E5%AE%89%E4%BA%8B%E5%8F%98.md#1">西安事变</a>绝不坐壁上观”的日本军阀，深有“此时不灭中国，将无来时”的感喟，从而提前了全面侵华战争的时间表。西安事变后仅半年，1937年7月7日，那一场由中共所一心盼望的“被侵略战争”，便终于在日本军阀的疯狂发动下，简直就是在中共的直接诱发下，全面爆发了。</p>
+<p>此外，早已发话“对<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%A5%BF%E5%AE%89%E4%BA%8B%E5%8F%98.md#1">西安事变</a>绝不坐壁上观”的日本军阀，深有“此时不灭中国，将无来时”的感喟，从而提前了全面侵华战争的时间表。西安事变后仅半年，1937年7月7日，那一场由中共所一心盼望的“被侵略战争”，便终于在日本军阀的疯狂发动下，简直就是在中共的直接诱发下，全面爆发了。</p>
 <p>西安兵变的恶劣后果，甚至让当时共产国际的苏共领导人季米特洛夫也说中了。他在日记中写道：“张学良的行动，不论他的意图如何，客观上只能损害把中国人民的力量团结在抗日统一战线中，并会鼓励日本对中国的侵略。”</p>
 <p>自此，中共为避免被国军一举消灭，口头高调鼓动“抗战”，实则利用日军进攻中国，自己从中渔利，伺机坐大的险恶阴谋，终于完成，也让中华民族遭遇了亘古未有的8年巨大战争创伤。</p>
 <p>可以说，没有西安军事叛变，共产党早就被消灭了，中国现代史也将被改写。因此，作为政变直接发动者的张学良和杨虎城，理应被视为历史的罪人。</p>
 <h2>张学良拒绝回大陆</h2>
 <p>面对全国的声讨，苏联、中共的“背信弃义”，盲从轻信的张学良陷于深深的懊悔中，因此决定12月25日陪同蒋介石飞回南京，以示负荆请罪之意。张学良送蒋回南京后，被国民政府高等军事法庭会审宣判，以“首谋伙党，对于上官为暴行胁迫”之罪名，判处有期徒刑10年，褫夺公权5年，次年1月1日国民政府明令公布。张学良随后被囚禁、软禁，又随蒋到台湾。他九十年代在美国定居，2001年去世。</p>
 <p>颇有意味的是，张学良有生之年，无论窃国后的中共怎样“盛情邀请”，再也没有踏上故土一步。</p>
-<h2>自称“<ahref="https://github.com/jddrbr3603/djy/blob/master/gb/tag/%E7%BD%AA%E4%BA%BA%E4%B8%AD%E7%9A%84%E7%BD%AA%E9%AD%81.md#1">罪人中的罪魁</a>”</h2>
+<h2>自称“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BD%AA%E4%BA%BA%E4%B8%AD%E7%9A%84%E7%BD%AA%E9%AD%81.md#1">罪人中的罪魁</a>”</h2>
 <p>各位看官，您肯定想知道张学良后来如何思考自己发动西安事变的吧？是这样的。1954年，张去见过蒋介石之后，写了《西安事变反醒录》。张认为自己当时对共产党认识不清，为实现抗日心愿，以致害了国家，害了人民，十分后悔。蒋介石次子蒋纬国生前曾回忆与张学良几次喝酒的情形：“他酒醉了之后就抱着我痛哭说，老弟啊，我这老哥哥做错了事啦！”这也真应了那句话：一失足成千古恨！</p>
 <p>张学良晚年虔信基督教。他1990年6月1日九十岁生日时，引用《圣经》中的话说：“我是一个罪人，是罪人中的罪魁。”据悉，张从来没有抱怨过蒋介石对他的囚禁。他1991年到美国后，《纽约时报》曾采访过他。他在解释为什么决定送蒋离开西安并自愿接受惩罚时说：“那是叛乱，我不得不负起责任。”</p>
-<p>可惜的是，他醒悟得真是太晚了。而更可恨的是，抱憾离世的张学良至今仍被中共用来洗脑中国人，称他为“<ahref="https://github.com/jddrbr3603/djy/blob/master/gb/tag/%E6%B0%91%E6%97%8F%E8%8B%B1%E9%9B%84.md#1">民族英雄</a>”“千古功臣”。您看了这期节目，当然会明白他到底是共产党的英雄、功臣，还是自己说的“罪魁”。</p>
+<p>可惜的是，他醒悟得真是太晚了。而更可恨的是，抱憾离世的张学良至今仍被中共用来洗脑中国人，称他为“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B0%91%E6%97%8F%E8%8B%B1%E9%9B%84.md#1">民族英雄</a>”“千古功臣”。您看了这期节目，当然会明白他到底是共产党的英雄、功臣，还是自己说的“罪魁”。</p>
 <p>书说完了，我们下集“杨虎城”再见。</p>
-<p>《欺世大观》制作组</p>
+<p>《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/【欺世大观】.md#1">欺世大观</a>》制作组</p>
 <p>责任编辑：李昊</p>
 	
 <hr>
-
+<hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/jddrbr3603/djy/blob/master/gb/15/7/10/n4477439.md#1">刘子真：张学良眼中的官二代</a></li>
-<li><a href="https://github.com/jddrbr3603/djy/blob/master/gb/15/8/31/n4516631.md#1">张学良晚年拒回中国大陆 在美拒见江泽民</a></li>
-<li><a href="https://github.com/jddrbr3603/djy/blob/master/gb/16/8/21/n8222139.md#1">林辉：还原中共“英雄模范”之张学良</a></li>
-<li><a href="https://github.com/jddrbr3603/djy/blob/master/gb/16/9/29/n8349935.md#1">张学良园区3周年庆祝活动10月1日展开</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/10/n4477439.md#1">刘子真：张学良眼中的官二代</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/8/31/n4516631.md#1">张学良晚年拒回中国大陆 在美拒见江泽民</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/21/n8222139.md#1">林辉：还原中共“英雄模范”之张学良</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/9/29/n8349935.md#1">张学良园区3周年庆祝活动10月1日展开</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/30/n10263648.md#1" target="_blank">共产暴政录：迫害法轮功，毁坏道德</a></li><li><a href="https://github.com/jddrbr3603/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/10/n11782021.md#1" target="_blank">读《转法轮》澳洲西人找到生命意义</a></li>
-<hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/19/n9864134.md#1" target="_blank">毛泽东诗词宣扬暴力 为文革武斗输注能量</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/6/n7526736.md#1" target="_blank">绝处逢生 令药学业同行目瞪口呆的神迹</a></li><hr>
+
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/nmgmpi3768/djy/blob/master/gb/20/8/28/n12363346.md#1">拯救垂死的鱼 一群猪因善行成为网红</a></li>
-<li><a href="https://github.com/nmgmpi3768/djy/blob/master/gb/20/8/29/n12366370.md#1">【薇羽看世间】FBI解密：来自金星的科学家</a></li>
-<li><a href="https://github.com/nmgmpi3768/djy/blob/master/gb/20/8/31/n12368878.md#1">妈妈昏倒 5岁儿打“玩具救护车”上号码救母</a></li>
-<li><a href="https://github.com/nmgmpi3768/djy/blob/master/gb/20/6/13/n12183566.md#1">贾雨村，一个从来不曾过时的现实主义者</a></li>
-<li><a href="https://github.com/nmgmpi3768/djy/blob/master/gb/20/8/10/n12318960.md#1">【命理】什么时候能找到男朋友？</a></li>
-<li><a href="https://github.com/nmgmpi3768/djy/blob/master/gb/20/9/3/n12378200.md#1">【珍言真语】桑普：捷克议长访台 欧盟一中新解</a></li>
-<li><a href="https://github.com/nmgmpi3768/djy/blob/master/gb/20/9/3/n12376889.md#1">【西岸观察】邮寄选票加剧美国大选不确定性</a></li>
-<li><a href="https://github.com/nmgmpi3768/djy/blob/master/gb/20/9/4/n12379140.md#1">【老外看中国】馆长遇袭 网友疑中共幕后策划</a></li>
-<li><a href="https://github.com/nmgmpi3768/djy/blob/master/gb/20/9/2/n12375291.md#1">美中进入冷战？蓬佩奥：习书记已做选择</a></li>
-<li><a href="https://github.com/nmgmpi3768/djy/blob/master/gb/20/9/2/n12374481.md#1">【拍案惊奇】王毅欧洲行受辱 拜登团队资助暴徒</a></li>
-<li><a href="https://github.com/nmgmpi3768/djy/blob/master/gb/20/9/2/n12375395.md#1">川普：中共瞒疫 中国死亡数比任何国家都多</a></li>
-<li><a href="https://github.com/nmgmpi3768/djy/blob/master/gb/20/9/1/n12373697.md#1">二亿元飞机半价也卖不出 赵本山遭女儿吐槽</a></li>
-<li><a href="https://github.com/nmgmpi3768/djy/blob/master/gb/20/9/3/n12376709.md#1">巨石强森惊爆确诊中共肺炎 全家都中镖</a></li>
-<li><a href="https://github.com/nmgmpi3768/djy/blob/master/gb/20/8/31/n12371304.md#1">7天内2起官司 范冰冰借工作室感叹人情冷暖</a></li>
-<li><a href="https://github.com/nmgmpi3768/djy/blob/master/gb/20/9/2/n12375748.md#1">黄秋生生日许愿：将一生所学教给台湾下一代</a></li>
-<li><a href="https://github.com/nmgmpi3768/djy/blob/master/gb/20/9/1/n12373556.md#1">曾遭设局嫖娼封杀六年 黄海波参加聚会疑复出</a></li>
-<li><a href="https://github.com/nmgmpi3768/djy/blob/master/gb/20/9/2/n12374745.md#1">流浪狗被涂画成老虎 马国动保团体悬赏缉凶</a></li>
-<li><a href="https://github.com/nmgmpi3768/djy/blob/master/gb/20/9/1/n12372441.md#1">俄公布“沙皇炸弹”测试画面 史上最强核爆</a></li>
-<li><a href="https://github.com/nmgmpi3768/djy/blob/master/gb/20/9/2/n12374457.md#1">殡仪馆员工打开尸袋 美国女子“复活”</a></li>
-<li><a href="https://github.com/nmgmpi3768/djy/blob/master/gb/20/9/2/n12374969.md#1">环太平洋军演 导弹击沉美军靶船画面曝光</a></li>
-<li><a href="https://github.com/nmgmpi3768/djy/blob/master/gb/20/9/3/n12377585.md#1">美国警察逮捕市长 网民：中共公安敢吗？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/jddrbr3603/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/jddrbr3603/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/26/n12358629.htm">【欺世大观】千古恨！张学良自称罪人中的罪魁</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/26/n12358629.htm">【欺世大观】千古恨！张学良自称罪人中的罪魁</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/jddrbr3603/djy/blob/master/gb/20/8/26/n12358629.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jddrbr3603/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jddrbr3603/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jddrbr3603/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/8/26/n12358629.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
